# h5fortran

./: fpm.toml  meson.build
.github/workflows/: intel-oneapi.yml
cmake/: compilers.cmake  libraries.json
src/: CMakeLists.txt  attr_read.f90  attr_write.f90  interface.f90  meson.build  read_ascii.f90.in  read_attr_utf8.f90  read_scalar.f90  read_utf8.f90  utils.f90
test/: CMakeLists.txt  meson.build  test_array.f90  test_deflate_props.f90  test_deflate_read.f90  test_deflate_write.f90  test_exist.f90  test_string_read.f90  test_string_utf8.f90
